# proofgraph

./: .gitignore  CLAUDE.md  Dockerfile.python  README.md  docker-compose.yml  pyproject.toml
ProofGraph/: Main.lean  ProofGraph.lean  lake-manifest.json  lakefile.toml
ProofGraph/ProofGraph/: Extract.lean  Filters.lean  Json.lean  Properties.lean
scripts/: generate_figure.py  merge_extractions.py
src/proofgraph/: __init__.py  checkpoint.py  clusters.py  loader.py  spectral.py  viz.py
tests/: test_checkpoint.py  test_clusters.py  test_loader.py  test_merge.py  test_scale.py  test_spectral.py  test_viz.py
