[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proofgraph"
version = "0.1.0"
description = "Network science and spectral graph theory for formalized mathematics"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.2",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["proofgraph*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
